plugins {
    id 'java-library'
    id 'maven-publish' // For publishing to local maven repo
    id 'idea'
    id 'eclipse'
    id 'net.neoforged.moddev' version '2.0.134'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = "ShH's Create Core-" + new Date().format("yy.MM.dd")
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
//    withSourcesJar()
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    flatDir {
        dirs 'libs'
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    } // Modrinth Mods
    exclusiveContent {
        forRepository {
            maven {
                name = "CurseForge"
                url = "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    } // CurseForge Mods
    maven {
        name = "Iron's Maven - Release"
        url = "https://code.redspace.io/releases"
    } // Iron's Spell 'n Spellbook
    maven {
        name = "Iron's Maven - Release"
        url = "https://code.redspace.io/snapshots"
    } // Iron's Spell 'n Spellbook
    maven {
        name = "Player Animator"
        url = "https://maven.kosmx.dev/"
    }
    maven {
        name = "Geckolib"
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
        content {
            includeGroup("software.bernie.geckolib")
        }
    }
    maven { url = "https://mvn.devos.one/snapshots" } // Registrate
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven { url = "https://maven.blamejared.com" } // JEI, Vazkii's Mods
    maven { url = "https://maven.theillusivec4.top/" } // Curios API
    maven {
        url 'https://jitpack.io'
        content {
            includeGroup "com.github.rtyley"
        }
    }
    maven {
        url "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    } // KubeJS

    maven { url "https://maven.dragons.plus/releases" } // DragonsPlusMinecraft Maven
    maven { url "https://maven.fallenbreath.me/releases" } // Conditional Mixin

}

dependencies {
    api("dev.latvian.mods:kubejs-neoforge:2101.7.2-build.348")

    implementation("com.tterrag.registrate:Registrate:$registrate_version")

    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:ponder-neoforge:$ponder_version+mc$minecraft_version")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-$minecraft_version:$flywheel_version")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-$minecraft_version:$flywheel_version")

//    implementation "maven.modrinth:create-dragons-plus:${create_dragons_plus_version}"
    implementation("plus.dragons.createdragonsplus:create-dragons-plus-${minecraft_version}:${create_dragons_plus_version}")
//    compileOnly "maven.modrinth:create-enchantment-industry:${create_enchantment_industry_version}"
    implementation("plus.dragons.createenchantmentindustry:create-enchantment-industry-${minecraft_version}:${create_enchantment_industry_version}")

    implementation "maven.modrinth:create-wizardry:YoUVUmtF"

    implementation("mezz.jei:jei-$minecraft_version-neoforge:$jei_version") // JEI
    runtimeOnly "vazkii.patchouli:Patchouli:$minecraft_version-$patchouli_version-NEOFORGE-SNAPSHOT" // Patchouli

//    compileOnly("top.theillusivec4.curios:curios-neoforge:$curios_version+$minecraft_version:api") // Curios API
    implementation("top.theillusivec4.curios:curios-neoforge:$curios_version+$minecraft_version")

    implementation "maven.modrinth:jade:15.10.5+neoforge"

    implementation "maven.modrinth:kaleidoscope-cookery:1.2.1-neoforge+mc1.21.1" // 森罗厨房
    implementation "maven.modrinth:kaleidoscope-compat:2.4.4-neoforge+mc1.21.1" // 森罗物语：兼容

    implementation "io.redspace:irons_lib:${irons_lib_version}"
    implementation "io.redspace:irons_spellbooks:${irons_spells_version}"

    runtimeOnly "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
    runtimeOnly "dev.kosmx.player-anim:player-animation-lib-forge:${player_animator_version}+${minecraft_version}"

    runtimeOnly "dev.xkmc:better_creative_tabs:0.1.2"
    runtimeOnly "dev.xkmc:fast_projectile_api:${fast_projectile_api_ver}"

    implementation "dev.xkmc:l2serial:${l2serial_ver}"
    implementation "dev.xkmc:l2modularblocks:${l2modularblocks_ver}"
    implementation "dev.xkmc:l2core:${l2core_ver}"
    runtimeOnly "dev.xkmc:l2tabs:${l2tabs_ver}"
    implementation "dev.xkmc:l2menustacker:${l2menustacker_ver}"
    implementation "dev.xkmc:l2itemselector:${l2itemselector_ver}"
    implementation "dev.xkmc:l2damagetracker:${l2damagetracker_ver}"
    runtimeOnly "dev.xkmc:l2magic:${l2magic_ver}"
    runtimeOnly "dev.xkmc:mob_weapon_api:${mob_weapon_api_ver}"
    implementation "dev.xkmc:pandora:${pandora_ver}"
    implementation "dev.xkmc:l2library:${l2library_ver}-slim"

    implementation "dev.xkmc:l2complements:${l2complements_ver}"
    implementation "dev.xkmc:l2hostility:${l2hostility_ver}"
    implementation "dev.xkmc:l2archery:${l2archery_ver}"
    implementation "dev.xkmc:curseofpandora:${curseofpandora_ver}"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
